# qfin-twin

./: ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: flash_crash.rs  gfc_2008.rs
k8s/: master.yaml  worker.yaml
proto/: twin.proto
src/: config.rs  simulation.rs  types.rs
src/agents/: central_bank.rs  fundamental.rs  hedge_fund.rs  market_maker.rs  mod.rs  momentum.rs  noise.rs
src/market/: order_book.rs
src/quantum/: annealing.rs  mod.rs  qaoa.rs
